message FishGL {
    required float pos_x = 1;
    required float pos_y = 2;
    required float pos_z = 3;
    required float orient_x = 4;
    required float orient_y = 5;
    required float orient_z = 6;
}
